<resources>
    <string name="app_name">kanikani3</string>
    <string name="user_name"></string>
    <string name="twitter_name">\@</string>
    <string name="user_name_label">ユーザー名：</string>
    <string name="twitter_label">Twitter：</string>


    <!-- MainActivity トースト用 -->
    <string name="bluetooth_is_not_supported">Bluetooth is not supported.</string>
    <string name="bluetooth_is_not_working">Bluetooth is not working.</string>


    <!-- MainActivity メニュー用 -->
    <string name="search">Search</string>

    <!-- MainActivity ラベル用 -->
    <string name="device_name">Device Name : </string>
    <string name="device_address">Device Address : </string>

    <!-- DeviceListActivity トースト用 -->
    <string name="unknown_device">Unknown device</string>

    <!-- DeviceListActivity メニュー用 -->
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>


    <string name="bluetooth_is_not_supported"></string>
    <string name="device_name"></string>
    <string name="device_address"></string>
    <string name="stop"></string>
    <string name="scan"></string>
    <string name="search"></string>

    <!--string name="transmission_button">送信</string-->
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="transmission_button">送信</string>

</resources>